--- a/index.html
+++ b/index.html
@@ -5,48 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whatsapp</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        body{
-            display: flex;
-            height: 100vh;
-            width: 100vw;
-            justify-content: center;
-            align-items: center;
-            scroll-behavior: smooth;
-            background: linear-gradient(#009688 0%, #009688 130px, #d9dbd5 130px, #d9dbd5 100%) no-repeat;
-        }
-        .mainconatiner{
-            height: 100vh;
-            min-height: 96vh;
-            width: 100vw;
-            max-width: 1400px;
-            display: flex;
-            overflow-y: scroll;
-        }
-        .mainconatiner::-webkit-scrollbar{
-            display: none;
-        }
-        iframe{
-            height: 100vh;
-        }
-        #sidebar{
-            max-width: 400px;
-            min-width: 300px;
-            width: 38vw;
-        }
-        #chats{
-            width: 75vw;
-        }
-    </style>
+    <link rel="stylesheet" href="css/index.css">
 </head>  
 <body>
     <div class="mainconatiner">
-        <iframe src="sidebar.html" id="sidebar" frameborder="0"></iframe>
-        <iframe src="ArijitSingh.html" id="chats" frameborder="0"></iframe>
+        <iframe src="sidebar.html" id="sidebar" frameborder="0" title="Sidebar"></iframe>
+        <iframe src="ArijitSingh.html" id="chats" frameborder="0" title="Chats"></iframe>
     </div>
 </body>
 </html>
