Add sidebar data and functionality

--- a/sidebar.html
+++ b/sidebar.html
@@ -57,8 +57,8 @@
 
 </body>
 <script src="https://kit.fontawesome.com/111b1c1bf6.js" crossorigin="anonymous"></script>
-<script src="sidebar-data.js"></script>
-<script src="sidebar.js"></script>
+<script src="js/sidebar-data.js"></script>
+<script src="js/sidebar.js"></script>
 <script>
     let chatlistBox = document.querySelector('.chatlist')
 
